# SyncWatcher

./: .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  COMPLETION_STATUS.md  FINAL_STATUS.md  GEMINI.md  LICENSE  LICENSE-AGPL-3.0.txt  LICENSE-COMMERCIAL.md  PHASE1-2_SUMMARY.md  PRIVACY.ko.md  PRIVACY.md  Phase6-Review2-Final.md  Phase6-review1.md  README.ko.md  README.md  TERMS.ko.md  TERMS.md  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  verify.sh  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: dispatch-studiojin-home-release-notes.yml  release.yml  update-download-badge.yml
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
doc/: DESIGN_SYSTEM.md  PHASE3-4_FINAL_STATUS.md  PHASE3-4_PROGRESS.md  PHASE5.md  PHASE6.md  mcp-control-plane-live-smoke.md  release-sbom-attestation-runbook.md
doc/adr/: ADR-20260209-0001-VFS-mount-table-volume-enumeration.md  ADR-20260210-0002-app-lifecycle-background-tray.md  ADR-20260211-0003-sync-task-target-conflict-and-orphan-cleanup.md  ADR-20260215-0004-runtime-watch-sync-queue-and-concurrency.md  (+4 more)
docs/: DESIGN_SYSTEM.md  acl-inline-audit-20260412.md  app-store-launch-checklist.md  mcp-control-plane-live-smoke.md  mcp.ko.md  mcp.md  release-sbom-attestation-runbook.md  synctask.ko.md  synctask.md
scripts/: install-macos-latest.sh  live-mcp-smoke.mjs
src/: App.closeLifecycle.test.tsx  App.css  App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: SyncWatcherMacBridge.swift
src-tauri/src/: apple_bridge.rs  config_store.rs  control_plane.rs  distribution.rs  error_codes.rs  input_validation.rs  lib.rs  lib_tests.rs  license.rs  license_validation.rs  logging.rs  main.rs  mcp_jobs.rs  mcp_stdio.rs  network_mount.rs  path_validation.rs  recurring.rs  security_scoped.rs  supporter.rs  system_integration.rs  watcher.rs
src-tauri/src/sync_engine/: engine.rs  mod.rs  types.rs
(+172 files in other folders)
