[package]
name = "syncwatcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "syncwatcher"

[lib]
name = "syncwatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
notify = "6.1"
walkdir = "2.5"
twox-hash = "1.6"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
filetime = "0.2"
tempfile = "3.10"
nix = { version = "0.29", features = ["fs"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde_yaml = "0.9.34"
chrono = "0.4"

[[bin]]
name = "sync-cli"
path = "src/bin/sync-cli.rs"

